--- a/gestion_doc/document_management/templates/home.html
+++ b/gestion_doc/document_management/templates/home.html
@@ -22,7 +22,7 @@
         </div>
     </div>
 {% if not role_name == 'AGENT' %}
-<div class="row g-4">
+<div class="row g-4 mt-5">
     {% if afficher_delegations %}
     <div class="col-md-4 col-sm-6">
         <div class="card text-white bg-primary shadow-sm h-100">
